--- a/src/components/highlights.astro
+++ b/src/components/highlights.astro
@@ -4,14 +4,15 @@ import rejse1 from "../assets/images/rejse1.png";
 import rejse2 from "../assets/images/rejse2.png";
 import rejse3 from "../assets/images/rejse3.png";
 import rejse4 from "../assets/images/rejse4.png";
+import rejse5 from "../assets/images/rejse5.png";
 ---
 
 <div class="bg-gray-50 py-12">
   <div class="text-center mb-8">
-    <h2 class="text-3xl font-bold text-gray-800">Highlights</h2>
+    <h2 class="text-[54px] px10 knewave">Highlights</h2>
   </div>
 
-  <div class="grid grid-cols-1 md:grid-cols-3 gap-4 max-w-3xl mx-auto">
+  <div class="grid grid-cols-1 md:grid-cols-3 gap-4 max-w-2xl mx-auto">
     <!-- Billede 1 -->
     <div class="col-span-2 md:col-span-2">
       <Image
@@ -24,7 +25,7 @@ import rejse4 from "../assets/images/rejse4.png";
     <!-- Billede 2 -->
     <div class="col-span-2 md:col-span-1">
       <Image
-        src={rejse2}
+        src={rejse4}
         alt="Beach View" 
         class="rounded-lg shadow-md object-cover w-full h-full"
       />
@@ -42,7 +43,7 @@ import rejse4 from "../assets/images/rejse4.png";
     <!-- Billede 4 -->
     <div class="col-span-2 md:col-span-1">
       <Image
-        src={rejse4}
+        src={rejse5}
         alt="Skydiving" 
         class="rounded-lg shadow-md object-cover w-full h-full"/>
         
@@ -50,7 +51,7 @@ import rejse4 from "../assets/images/rejse4.png";
         <!-- Billede 4 -->
         <div class="col-span-2 md:col-span-1">
           <Image
-            src={rejse4}
+            src={rejse2}
             alt="Skydiving" 
             class="rounded-lg shadow-md object-cover w-full h-full"/>
             
