--- a/src/components/hvorforvaelgeos.astro
+++ b/src/components/hvorforvaelgeos.astro
@@ -3,13 +3,13 @@ import { Image } from "astro:assets";
 import Team from "../assets/images/Team.png";
 import Trust from "../assets/images/Trust.png";
 import Temple from "../assets/images/Temple.png";
-import Earth from "../assets/images/Earth Globe.png";
+import Earth from "../assets/images/Earth.png";
 ---
     
     <section class="bg-gradient-to-r from-[#fce8cf] to-[#f8ad66] py-16">
     <div class="container mx-auto text-center">
       <!-- Overskrift -->
-      <h2 class="text-3xl font-knenave mb-12">Hvorfor vælge os?</h2>
+      <h2 class="text-[34px] px10 knewave">Hvorfor vælge os?</h2>
       <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-8">
         <!-- Teambuilding -->
         <div class="text-center">
@@ -17,9 +17,9 @@ import Earth from "../assets/images/Earth Globe.png";
             <i class="fas fa-users text-5xl text-black"></i>
           </div>
           <Image
-          src={Trust} alt="Teambuilding logo" class="mx-auto mb-12 h-20" />
-          <h3 class="font-bold text-lg mb-2">Teambuilding</h3>
-          <p class="text-sm leading-relaxed">
+          src={Team} alt="Teambuilding logo" class="mx-auto mb-12 h-20" />
+          <h3 class="text-[25px] px10 knewave">Teambuilding</h3>
+          <p class="poppins leading-relaxed ">
             Hvorfor tage på et kedeligt kursus i Danmark, når du kan rejse ud i verden og udvikle dig samtidig? Du rejser sammen med andre unge voksne og lærer en hel masse om samarbejde, relationer, fællesskab, konflikter, styrker og stærke teams. Du får ikke blot rejse-erfaring på cv’et, men også et væld af brugbare redskaber til studie eller karriere.
           </p>
         </div>
@@ -30,25 +30,26 @@ import Earth from "../assets/images/Earth Globe.png";
             <i class="fas fa-hand-holding-heart text-5xl text-black"></i>
           </div>
           <Image
-          src={Team} alt="Teambuilding logo" class="mx-auto mb-12 h-20" />
-          <h3 class="font-bold text-lg mb-2">Frivilligt arbejde & Kulturforståelse</h3>
-          <p class="text-sm leading-relaxed">
+          src={Trust} alt="Teambuilding logo" class="mx-auto mb-12 h-25" />
+          <h3 class="text-[25px] px10 knewave">Frivilligt arbejde & Kulturforståelse</h3>
+          <p class="poppins leading-relaxed ">
             Drømmer du om at lave frivilligt arbejde og gøre en forskel i et andet land? Mange af vores højskole rejser inkluderer frivilligt arbejde, hvor vi kommer helt tæt på de lokale. Det giver dig en unik indsigt i landet, større forståelse for kulturen og måden man lever på i de forskellige lande.
           </p>
         </div>
   
-        <!-- Friuger -->
-        <div class="text-center">
-          <div class="mb-4">
-            <i class="fas fa-globe text-5xl text-black"></i>
-          </div>
-          <Image
-          src={Team} alt="Teambuilding logo" class="mx-auto mb-12 h-20" />
-          <h3 class="font-bold text-lg mb-2">Friuger – et væld af muligheder</h3>
-          <p class="text-sm leading-relaxed">
-            Efter spændende og lærerige undervisningsforløb, har vi – alt efter hvilken højskole rejse du vælger – lagt én eller flere friuger ind. Her har I mulighed for selv at tage styringen og udforske dét land, kontinent eller ø-rige vi befinder os i.
-          </p>
-        </div>
+<!-- Friuger -->
+<div class="text-center font-poppins">
+  <div class="mb-4">
+    <i class="fas fa-globe text-5xl text-black"></i>
+  </div>
+  <Image
+    src={Earth} alt="Teambuilding logo" class="mx-auto mb-12 h-20" />
+  <h3 class="text-[25px] px10 knewave">Friuger – et væld af muligheder</h3>
+  <p class="poppins leading-relaxed ">
+    Efter spændende og lærerige undervisningsforløb, har vi – alt efter hvilken højskole rejse du vælger – lagt én eller flere friuger ind. Her har I mulighed for selv at tage styringen og udforske dét land, kontinent eller ø-rige vi befinder os i.
+  </p>
+</div>
+
   
         <!-- Kultur -->
         <div class="text-center">
@@ -56,9 +57,9 @@ import Earth from "../assets/images/Earth Globe.png";
             <i class="fas fa-landmark text-5xl text-black"></i>
           </div>
           <Image
-        src={Team} alt="Teambuilding logo" class="mx-auto mb-12 h-20" />
-          <h3 class="font-bold text-lg mb-2">Spændende kulturoplevelser</h3>
-          <p class="text-sm leading-relaxed">
+        src={Temple} alt="Teambuilding logo" class="mx-auto mb-12 h-20" />
+          <h3 class="text-[25px] px10 knewave">Spændende kulturoplevelser</h3>
+          <p class="poppins leading-relaxed ">
             Kulturen er vigtig at opleve, når man befinder sig i et nyt land. Det giver dig både nogle rigtigt spændende oplevelser og menneske-møder, men også en unik indsigt, du ikke kan læse dig til i en bog eller se i et rejseprogram.
           </p>
         </div>
