--- a/src/components/qoutes.astro
+++ b/src/components/qoutes.astro
@@ -7,7 +7,7 @@ import emma from "../assets/images/emma.png";
 
 <div class="bg-gray-50 py-12">
     <div class="text-center mb-12">
-      <h2 class="text-3xl font-bold text-gray-800">Tidligere rejsende</h2>
+      <h2 class="text-[54px] px10 knewave">Tidligere rejsende</h2>
     </div>
   
     <div class="space-y-8 max-w-4xl mx-auto">
